--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Sreehari A S</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="Css/styles.css">
   <link rel="icon" href="gamericn.ico">
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
