--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </div>
 
   <div class="BottomContainer">
-    <a class="footer-link" href="facebook.html">Facebook</a>
+    <a class="footer-link" href="Facebook.html">Facebook</a>
     <a class="footer-link" href="Instagram.html">Instagram</a>
     <a class="footer-link" href="LinkedIn.html">LinkedIn</a>
 
